; ModuleID = '/home/carl/AnghaBench/linux/net/nfc/nci/extr_core.c_nci_core_conn_create_req.c'
source_filename = "/home/carl/AnghaBench/linux/net/nfc/nci/extr_core.c_nci_core_conn_create_req.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nci_dev = type { i32 }
%struct.core_conn_create_data = type { i32, i32 }

@NCI_OP_CORE_CONN_CREATE_CMD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nci_dev*, i64)* @nci_core_conn_create_req to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nci_core_conn_create_req(%struct.nci_dev* %0, i64 %1) #0 {
  %3 = alloca %struct.nci_dev*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.core_conn_create_data*, align 8
  store %struct.nci_dev* %0, %struct.nci_dev** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = inttoptr i64 %6 to %struct.core_conn_create_data*
  store %struct.core_conn_create_data* %7, %struct.core_conn_create_data** %5, align 8
  %8 = load %struct.nci_dev*, %struct.nci_dev** %3, align 8
  %9 = load i32, i32* @NCI_OP_CORE_CONN_CREATE_CMD, align 4
  %10 = load %struct.core_conn_create_data*, %struct.core_conn_create_data** %5, align 8
  %11 = getelementptr inbounds %struct.core_conn_create_data, %struct.core_conn_create_data* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.core_conn_create_data*, %struct.core_conn_create_data** %5, align 8
  %14 = getelementptr inbounds %struct.core_conn_create_data, %struct.core_conn_create_data* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @nci_send_cmd(%struct.nci_dev* %8, i32 %9, i32 %12, i32 %15)
  ret void
}

declare dso_local i32 @nci_send_cmd(%struct.nci_dev*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
